--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "link Grabber",
   "version": "1.0.1",
-  "permissions": ["activeTab", "tabs"],
+  "permissions": ["activeTab", "tabs", "downloads"],
   "browser_action": {
     "default_title": "Links ?",
     "default_popup": "index.html"
